# LFU_cache

./: CMakeLists.txt  LICENSE  Makefile  README-en.md  README.md  lfu.out  main.cpp
common/: colors.hpp  slow_get_page.hpp
graphDump/: dump.gv
headers/: cache.hpp  cacheDump.hpp  cacheFunc.hpp  cacheStruct.hpp  idealCache.hpp
myLib/: myLib.cpp
src/: cacheDump.cpp  cacheFunc.cpp  cacheStruct.cpp  idCacheMain.cpp  main.cpp
tests/: tests.cpp  tests.hpp  testsMain.cpp
tests/headers/: data.hpp  tests.hpp
tests/src/: tests.cpp  testsMain.cpp
vector/: vector.cpp
